--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
   <script>
   $(function() {
     $( "#startdate,#enddate,#startdate_f,#enddate_f" ).datepicker({
-    dateFormat: "dd-mm-yy"});
+    dateFormat: "mm-dd-yy"});
   });
   </script>
 
