--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,13 +30,6 @@ td, th {
   border-radius: 50%
   }
 
-h1  {
-/*  color: rgba(150, 0, 50, 1);*/
-  font-size: 24pt;
-  font-weight: bold;
-  padding-left: 10px;
-  font-variant: small-caps;
-}
 
 h2 {
 /*      background-color: rgba(150, 0, 50, 1);*/
@@ -247,7 +240,7 @@ ul {
 .image-listing {
   margin-top: 10px;
   width: 150px ;
-  max-height: 100%;
+  height: 100px ;
 }
 
 .image-avatar {
