--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
             <img class = "image-avatar-small" src=<%= current_user.profile_pic %>>&nbsp;
             <%= current_user.first_name %>&nbsp;<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="/users/dashboard">Account Overview</a></li>
+              <li><a href="/users/dashboard">My Dashboard</a></li>
               <li><a href="/users/edit_profile">Edit Profile</a></li>
               <li><a href="/users/edit">Change Password</a></li>
               <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
