--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
   <script>
   $(function() {
     $( "#startdate,#enddate,#startdate_f,#enddate_f" ).datepicker({
-    dateFormat: "mm-dd-yy"});
+    dateFormat: "yy-mm-dd"});
   });
   </script>
 
