--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,7 +77,6 @@ ul {
 .content-container {
   width: 1200px;
   height: 1000px;
-/*  margin-top: 50px;*/
   margin-left: auto;
   margin-right: auto;
 }
@@ -351,4 +350,21 @@ ul {
 
 .list-button {
   vertical-align: center;
+}
+
+.feature {
+    position: relative;
+}
+
+.feature a {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-decoration: none; /* No underlines on the link */
+    z-index: 10; /* Places the link above everything else in the div */
+    background-color: #FFF; /* Fix to make div clickable in IE */
+    opacity: 0; /* Fix to make div clickable in IE */
+    filter: alpha(opacity=1); /* Fix to make div clickable in IE */
 }
