--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,13 +32,10 @@ td, th {
 
 
 h2 {
-/*      background-color: rgba(150, 0, 50, 1);*/
-/*  color: rgba(150, 0, 50, 1);*/
   font-size: 14pt;
   font-weight: bold;
   margin-top: 10pt;
   margin-bottom: 5pt;
-
 }
 
 h3 {
@@ -179,7 +176,7 @@ ul {
   float: left;
   width: 35%;
   height: 100%;
-/*  border: 1px #BDBDBD dotted;*/
+  vertical-align: center;
 }
 
 .details-features-container {
@@ -209,7 +206,8 @@ ul {
   float: left;
 /*  border: 1px #BDBDBD dotted;*/
   text-align: center;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .entry-container {
