--- a/app/views/apartments/show.html.erb
+++ b/app/views/apartments/show.html.erb
@@ -1,25 +1,3 @@
-<!-- Javascript for Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-<script>
-  function initialize() {
-    var myLatlng = new google.maps.LatLng(<%=@the_latitude%>, <%=@the_longitude%>);
-    var mapOptions = {
-      zoom: 15,
-      center: myLatlng
-    }
-    var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-    var marker = new google.maps.Marker({
-        position: myLatlng,
-        map: map,
-        title: 'Hello World!'
-    });
-  }
-
-  google.maps.event.addDomListener(window, 'load', initialize);
-
-</script>
-
 <div class="page-header">
   <h1><%= @apartment.headline %></h1>
 </div>
@@ -36,11 +14,10 @@
 
     <div class="column4">
 
-      <div class="details-map-container" id="map-canvas">
-
-      </div>
+      <div class="details-map-container" id="map-canvas"></div>
       <div class="details-below-map-container">
         <div class="details-price-container">
+          &nbsp;
           <h3>$<%= @apartment.price %></h3>
           <h4>per month</h4>
         </div>
@@ -49,21 +26,21 @@
             <li>
               <div class="entry-neighborhood">
                 <span class="glyphicon glyphicon-road" aria-hidden="true"></span>
-                <%= @apartment.neighborhood_id %>
+                <%= @apartment.neighborhood.name %>
                 </div>
               <div class="clearfix"></div>
             </li>
             <li>
               <div class="entry-type">
                 <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                <%= @apartment.apttype %> (<%= @apartment.size %>)
+                <%= @apartment.apttype %>: <%= @apartment.size %>
               </div>
               <div class="clearfix"></div>
             </li>
             <li>
               <div class="entry-period">
                 <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                <%= @apartment.startdate %> - <%= @apartment.enddate %>
+                <%= @apartment.startdate.strftime('%v') %> - <%= @apartment.enddate.strftime('%v') %>
               </div>
               <div class="clearfix"></div>
             </li>
@@ -163,7 +140,7 @@
         <br>
         <img class = "image-avatar" src=<%=@apartment.user.profile_pic%>>
         <h1><%=@apartment.user.first_name%></h1>
-        <h4><%=@apartment.user.university_id%></h4>
+        <h4><%=@apartment.user.university.name%></h4>
         <br>
         <p>Current MBA student at University of Chicago. Born and raised in Singapore but have been living in the U.S. for the past eight years. Also completed exchanges in Beijing and London during my undergrad years. Love traveling and enjoy making new friends from different cultures!</p>
         <br>
@@ -174,3 +151,26 @@
   </div>
 
 </div>
+
+<!-- Javascript for Google Maps -->
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+<script>
+  function initialize() {
+    var myLatlng = new google.maps.LatLng(<%=@the_latitude%>, <%=@the_longitude%>);
+    var mapOptions = {
+      zoom: 15,
+      center: myLatlng
+    }
+    var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+    var marker = new google.maps.Marker({
+        position: myLatlng,
+        map: map,
+        title: 'Hello World!'
+    });
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
+
