--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -6,7 +6,7 @@
   <div class="column4-padding">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">My Profile <%= current_user.id %></h3>
+        <h3 class="panel-title">My Profile</h3>
       </div>
       <div class="panel-body">
         <div class="details-contact-container">
@@ -93,11 +93,14 @@
   </div>
 
     <% end %>
+
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">My Favorites</h3>
       </div>
     </div>
+
+
 
   </div>
 </div>
