--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -245,13 +245,13 @@ ul {
 
 .entry-left-user {
   float: left;
-  width: 33%;
+  width: 25%;
   height: 100%;
 }
 
 .entry-mid-user {
   float: left;
-  width: 66%;
+  width: 75%;
   height: 100%;
 }
 
@@ -365,4 +365,14 @@ ul {
     background-color: #FFF; /* Fix to make div clickable in IE */
     opacity: 0; /* Fix to make div clickable in IE */
     filter: alpha(opacity=1); /* Fix to make div clickable in IE */
+}
+
+.header {
+  clear: both;
+  background-color: #F5F5F8;
+  height: 40px;
+  font-size: 16pt;
+  text-align: center;
+  margin-bottom: 10px;
+  padding-top: 3px;
 }
