--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -375,4 +377,14 @@ ul {
   text-align: center;
   margin-bottom: 10px;
   padding-top: 3px;
+}
+
+.sign-in {
+  width: 200px;
+  height: 200px;
+  margin-left: auto ;
+  margin-right: auto ;
+  border-color: lightgray;
+  background-color: rgba(255,255,255,0.8)
+
 }
