--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -386,5 +386,11 @@ ul {
   margin-right: auto ;
   border-color: lightgray;
   background-color: rgba(255,255,255,0.8)
-
 }
+
+.ui-datepicker {
+    background: white;
+    border: 1px solid gray;
+    color: darkgray;
+}
+
