--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,25 @@
   <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAj_NDdLbBs7npzMT1e2nVQ_jAM3tyAif4"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+  <!-- Javascript for Google Maps -->
+  <script>
+    function initialize() {
+      var myLatlng = new google.maps.LatLng(<%=@the_latitude%>, <%=@the_longitude%>);
+      var mapOptions = {
+        zoom: 15,
+        center: myLatlng
+      }
+      var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+      var marker = new google.maps.Marker({
+          position: myLatlng,
+          map: map,
+          title: 'Hello World!'
+      });
+    }
+    google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -106,3 +125,6 @@
 
 </body>
 </html>
+
+
+
