--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -42,21 +42,12 @@
       </div>
     </div>
 
-<!--     <div class="form-group">
-      <label for="university_id" class="col-sm-2 control-label">
-        University
-      </label>
-      <div class="col-sm-10">
-        <%=select_tag("university_id", options_from_collection_for_select(University.all, "id", "name")) %>
-      </div>
-    </div> -->
-
     <div class="form-group">
       <label for="university_id" class="col-sm-2 control-label">
         University
       </label>
       <div class="col-sm-10">
-        <%= select_tag(:university_id, options_from_collection_for_select(University.all, "id", "name"), :class => "form-control" ) %>
+        <%= select_tag(:university_id, options_from_collection_for_select(University.all, "id", "name", current_user.university_id), :class => "form-control" ) %>
       </div>
     </div>
 
