--- a/app/views/apartments/show.html.erb
+++ b/app/views/apartments/show.html.erb
@@ -1,174 +1,190 @@
-
-
-<div class="page-header">
-  <h1><%= @apartment.headline %>
-    <% if current_user %>
-      <% if @apartment.user_id.to_i == current_user.id %>
-        <a href="/apartments/<%=@apartment.id%>/edit" class="btn btn-success">Edit Your Listing</a>
-        </form>
-      <% elsif current_user.favorites.pluck(:apartment_id).include? @apartment.id %>
-        <a href="/apartments/<%=@apartment.id%>" class="btn btn-danger">Your Favorite</a>
+  <div class="page-header">
+    <h1><%= @apartment.headline %>
+      <% if current_user %>
+        <% if @apartment.user_id.to_i == current_user.id %>
+          <a href="/apartments/<%=@apartment.id%>/edit" class="btn btn-success">Edit Your Listing</a>
+          </form>
+        <% elsif current_user.favorites.pluck(:apartment_id).include? @apartment.id %>
+          <a href="/apartments/<%=@apartment.id%>" class="btn btn-danger">Your Favorite</a>
+        <% else %>
+          <form action="/create_favorite">
+            <input type="hidden" name="apartment_id" id="apartment_id" value=<%= @apartment.id %>>
+            <input type="hidden" name="favorited_by_id" id="favorited_by_id" value=<%= current_user.id %>>
+            <input type="submit" value="Add to Favorites" class="btn btn-default">
+          </form>
+        <% end %>
       <% else %>
-        <form action="/create_favorite">
-          <input type="hidden" name="apartment_id" id="apartment_id" value=<%= @apartment.id %>>
-          <input type="hidden" name="favorited_by_id" id="favorited_by_id" value=<%= current_user.id %>>
-          <input type="submit" value="Add to Favorites" class="btn btn-default">
-        </form>
       <% end %>
-    <% else %>
-    <% end %>
-  </h1>
-</div>
+    </h1>
+  </div>
 
-<div class="content-container">
+  <div class="content-container">
 
-  <div class="details-top-container">
+    <div class="details-top-container">
 
-    <div class="column6">
+      <div class="column6">
 
-      <image class="image-hero" src= <%=@apartment.pictureurl%>>
+        <image class="image-hero" src= <%=@apartment.pictureurl%>>
+
+      </div>
+
+      <div class="column4">
+
+        <div class="details-map-container" id="map-canvas"></div>
+        <div class="details-below-map-container">
+          <div class="details-price-container">
+            &nbsp;
+            <h3>$<%= @apartment.price %></h3>
+            <h4>per month</h4>
+          </div>
+          <div class="details-features-container">
+            <ul>
+              <li>
+                <div class="entry-neighborhood">
+                  <span class="glyphicon glyphicon-road" aria-hidden="true"></span>
+                  <%= @apartment.neighborhood.name %>
+                  </div>
+                <div class="clearfix"></div>
+              </li>
+              <li>
+                <div class="entry-type">
+                  <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                  <%= @apartment.apttype %>: <%= @apartment.size %>
+                </div>
+                <div class="clearfix"></div>
+              </li>
+              <li>
+                <div class="entry-period">
+                  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                  <%= @apartment.startdate.strftime('%v') %> to <%= @apartment.enddate.strftime('%v') %>
+                </div>
+                <div class="clearfix"></div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
     </div>
 
-    <div class="column4">
-
-      <div class="details-map-container" id="map-canvas"></div>
-      <div class="details-below-map-container">
-        <div class="details-price-container">
-          &nbsp;
-          <h3>$<%= @apartment.price %></h3>
-          <h4>per month</h4>
+    <div class="details-bottom-container">
+      <div class="column6">
+        <div class="details-description-container">
+          <h2>Description:</h2>
+          <p><%= @apartment.description %></p>
         </div>
-        <div class="details-features-container">
+        <div class="details-amenities-container">
+          <h2>Amenities:</h2>
           <ul>
             <li>
-              <div class="entry-neighborhood">
-                <span class="glyphicon glyphicon-road" aria-hidden="true"></span>
-                <%= @apartment.neighborhood.name %>
-                </div>
-              <div class="clearfix"></div>
+              <% if @apartment.furnished %>
+              <i class="fa fa-check-square"></i> Furnished
+              <% else %>
+              <i class="fa fa-square-o"></i> Furnished
+              <% end %>
             </li>
             <li>
-              <div class="entry-type">
-                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                <%= @apartment.apttype %>: <%= @apartment.size %>
-              </div>
-              <div class="clearfix"></div>
+              <% if @apartment.ac %>
+              <i class="fa fa-check-square"></i> Air-Conditioning
+              <% else %>
+              <i class="fa fa-square-o"></i> Air-Conditioning
+              <% end %>
             </li>
             <li>
-              <div class="entry-period">
-                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-                <%= @apartment.startdate.strftime('%v') %> to <%= @apartment.enddate.strftime('%v') %>
-              </div>
-              <div class="clearfix"></div>
+              <% if @apartment.gym %>
+              <i class="fa fa-check-square"></i> Gym
+              <% else %>
+              <i class="fa fa-square-o"></i> Gym
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.pool %>
+              <i class="fa fa-check-square"></i> Pool
+              <% else %>
+              <i class="fa fa-square-o"></i> Pool
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.doorman %>
+              <i class="fa fa-check-square"></i> Doorman
+              <% else %>
+              <i class="fa fa-square-o"></i> Doorman
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.elevator %>
+              <i class="fa fa-check-square"></i> Elevator
+              <% else %>
+              <i class="fa fa-square-o"></i> Elevator
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.internet %>
+              <i class="fa fa-check-square"></i> Internet
+              <% else %>
+              <i class="fa fa-square-o"></i> Internet
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.cable %>
+              <i class="fa fa-check-square"></i> Cable
+              <% else %>
+              <i class="fa fa-square-o"></i> Cable
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.laundryu %>
+              <i class="fa fa-check-square"></i> Laundry in Unit
+              <% else %>
+              <i class="fa fa-square-o"></i> Laundry in Unit
+              <% end %>
+            </li>
+            <li>
+              <% if @apartment.laundryb %>
+              <i class="fa fa-check-square"></i> Laundry in Building
+              <% else %>
+              <i class="fa fa-square-o"></i> Laundry in Building
+              <% end %>
             </li>
           </ul>
         </div>
       </div>
+
+      <div class="column4">
+        <div class="details-contact-container">
+          <h2>Get to know your host:</h2>
+          <br>
+          <img class = "image-avatar" src=<%=@apartment.user.profile_pic%>>
+          <h1><%=@apartment.user.first_name%></h1>
+          <h4><%=@apartment.user.university.name%></h4>
+          <br>
+          <p>Current MBA student at University of Chicago. Born and raised in Singapore but have been living in the U.S. for the past eight years. Also completed exchanges in Beijing and London during my undergrad years. Love traveling and enjoy making new friends from different cultures!</p>
+          <br>
+          <a href="mailto:<%=@apartment.user.email%>" class="btn btn-primary btn-block">Contact Host</a>
+        </div>
+      </div>
+
     </div>
 
   </div>
 
-  <div class="details-bottom-container">
-    <div class="column6">
-      <div class="details-description-container">
-        <h2>Description:</h2>
-        <p><%= @apartment.description %></p>
-      </div>
-      <div class="details-amenities-container">
-        <h2>Amenities:</h2>
-        <ul>
-          <li>
-            <% if @apartment.furnished %>
-            <i class="fa fa-check-square"></i> Furnished
-            <% else %>
-            <i class="fa fa-square-o"></i> Furnished
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.ac %>
-            <i class="fa fa-check-square"></i> Air-Conditioning
-            <% else %>
-            <i class="fa fa-square-o"></i> Air-Conditioning
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.gym %>
-            <i class="fa fa-check-square"></i> Gym
-            <% else %>
-            <i class="fa fa-square-o"></i> Gym
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.pool %>
-            <i class="fa fa-check-square"></i> Pool
-            <% else %>
-            <i class="fa fa-square-o"></i> Pool
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.doorman %>
-            <i class="fa fa-check-square"></i> Doorman
-            <% else %>
-            <i class="fa fa-square-o"></i> Doorman
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.elevator %>
-            <i class="fa fa-check-square"></i> Elevator
-            <% else %>
-            <i class="fa fa-square-o"></i> Elevator
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.internet %>
-            <i class="fa fa-check-square"></i> Internet
-            <% else %>
-            <i class="fa fa-square-o"></i> Internet
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.cable %>
-            <i class="fa fa-check-square"></i> Cable
-            <% else %>
-            <i class="fa fa-square-o"></i> Cable
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.laundryu %>
-            <i class="fa fa-check-square"></i> Laundry in Unit
-            <% else %>
-            <i class="fa fa-square-o"></i> Laundry in Unit
-            <% end %>
-          </li>
-          <li>
-            <% if @apartment.laundryb %>
-            <i class="fa fa-check-square"></i> Laundry in Building
-            <% else %>
-            <i class="fa fa-square-o"></i> Laundry in Building
-            <% end %>
-          </li>
-        </ul>
-      </div>
-    </div>
+  <!-- Javascript for Google Maps -->
+  <script>
+    $(function() {
+      function initialize() {
+        var myLatlng = new google.maps.LatLng(<%=@the_latitude%>, <%=@the_longitude%>);
+        var mapOptions = {
+          zoom: 15,
+          center: myLatlng
+        }
+        var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-    <div class="column4">
-      <div class="details-contact-container">
-        <h2>Get to know your host:</h2>
-        <br>
-        <img class = "image-avatar" src=<%=@apartment.user.profile_pic%>>
-        <h1><%=@apartment.user.first_name%></h1>
-        <h4><%=@apartment.user.university.name%></h4>
-        <br>
-        <p>Current MBA student at University of Chicago. Born and raised in Singapore but have been living in the U.S. for the past eight years. Also completed exchanges in Beijing and London during my undergrad years. Love traveling and enjoy making new friends from different cultures!</p>
-        <br>
-        <a href="mailto:<%=@apartment.user.email%>" class="btn btn-primary btn-block">Contact Host</a>
-      </div>
-    </div>
-
-  </div>
-
-</div>
-
-
-
+        var marker = new google.maps.Marker({
+            position: myLatlng,
+            map: map,
+            title: 'Hello World!'
+        });
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    });
+  </script>
