--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,7 +46,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :profile_pic %>
+      <%= f.label :profile_pic, "Facebook ID" %>
       <%= f.text_field :profile_pic, autofocus: true, :class => "form-control" %>
     </div>
 
