--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -62,10 +62,10 @@
 
     <div class="form-group">
       <label for="profile_pic" class="col-sm-2 control-label">
-        Profile Picture
+        Facebook ID
       </label>
       <div class="col-sm-10">
-        <input type="text" name="profile_pic" class="form-control" value="<%= current_user.profile_pic %>">
+        <input type="text" name="profile_pic" class="form-control" value="<%= current_user.profile_pic %>" >
       </div>
     </div>
 
